<resources>
    <string name="app_name">Rubies</string>
    <string name="chat">Chat</string>
    <string name="community">Community</string>
    <string name="wallet">Wallet</string>
    <string name="version_text">version %s</string>
    <string name="personal_details">Personal Details</string>
    <string name="enter_personal_details">Kindly fill in your personal details to enable us proceed with your request.</string>
    <string name="first_name">First name</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last name</string>
    <string name="proceed">Proceed</string>
    <string name="chats">Chats</string>
    <string name="balanceTextView">₦0.00</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="fabbutton">fabButton</string>
    <string name="add_new_friend">Add new friend</string>
    <string-array name="contacts_array">
        <item>Ifeoma Adeyemi</item>
        <item>Obinna Adebayo</item>
        <item>Chinedu Akinwande</item>
        <item>Ngozi Adeolu</item>
        <item>Oluwabunmi Ezeani</item>
        <item>Ayodele Nwachukwu</item>
        <item>Olamide Okonkwo</item>
        <item>Chijioke Olufemi</item>
        <item>Ayoade Onyekachi</item>
        <item>Omolara Ibe</item>
        <item>Chuka Adesina</item>
        <item>Ayomide Nwosu</item>
        <item>Adanna Okeke</item>
        <item>Olawale Okorie</item>
        <item>Chinwe Adewale</item>
        <item>Okechukwu Akindele</item>
        <item>Adebisi Nnamdi</item>
        <item>Ifeanyichukwu Adegboye</item>
        <item>Morayo Chukwuma</item>
        <item>Adetokunbo Okafor</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_details">Login Details</string>
    <string name="input_login_details">Kindly input your login details to proceed</string>
    <string name="lost_connection">Network Connection lost</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account? please register.</string>
    <string name="add_friend">+ Add friend</string>
    <string name="message_friend">Send Message</string>
    <string name="auto">Auto</string>
    <string name="we_are_getting_your_contacts">Please wait,\nWe are setting up your profile 😊</string>

</resources>