<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragment.external.login.view.LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuidelines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuidelines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/br_firma_bold"
        android:text="@string/login_details"
        android:textColor="@color/blackish"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelines"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuidelines"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/br_firma_light"
        android:text="@string/input_login_details"
        android:textColor="@color/grayish"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelines"
        app:layout_constraintStart_toStartOf="@+id/leftGuidelines"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:lineHeight="23sp" />


    <TextView
        android:id="@+id/textViewNewAccountText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/br_firma_medium"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toTopOf="@+id/registerButton"
        app:lineHeight="23sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:hint="@string/phone_number"
        android:textColorHint="@color/grayish"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="true"
        app:hintTextColor="@color/blackish"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelines"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/leftGuidelines"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="@color/edit_text_color"
            android:fontFamily="@font/br_firma_regular"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blackish"
        android:enabled="false"
        android:fontFamily="@font/br_firma_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:maxLength="11"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelines"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuidelines"
        app:layout_constraintTop_toBottomOf="@+id/phoneInputLayout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuidelines"
        app:layout_constraintStart_toStartOf="@+id/leftGuidelines"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>